[project]
name = "c172"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivy-examples>=2.3.1",
    "kivy[full]>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
c172 = "c172:main"
